# QnAnalysis

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  QnAnalysisConfig.cmake.in  QnAnalysisConfig.sh.in  README.md
analysis/: CMakeLists.txt
analysis/na61/: CMakeLists.txt  v1.cpp
cmake_modules/: AnalysisTree.cmake  AnalysisTreeTaskSkeleton.cmake  Cuts.cmake  QnTools.cmake  Root.cmake  YamlCpp.cmake
cmake_tests_src/: test_filesystem.cxx
docker/: Dockerfile
macro/batch/: batch_run.sh  run.sh
setups/: CbmCuts.C  analysis-config.yml  hades-analysis-config-mult.yml  hades-analysis-config.yml  lambda-analysis-config.yml  observables-all.yml  observables-auau.yml  observables-calculation-config.yml  toymc-analysis-config.yml
setups/correction/na61/: pbpb_13agev.yml
setups/correlation/: example.yml  hades.yml  lambda.yml  toymc.yml
setups/correlation/na61/: pbpb13.yml
setups/hades/: au123-correction-debug.yml  correction-agag-123.yml  correction-agag-158.yml  correction-auau-123-all.yml  correction-auau-123-occupancy.yml  correction-auau-123-plains.yml  correction-auau-123.yml  correction-mcini.yml  correlation-agag-123.yml  correlation-agag-158.yml  correlation-all.yml  correlation-auau-123-occupancy.yml  correlation-auau-123-pi-neg.yml  correlation-auau-123-pi-pos.yml  correlation-auau-123-proton.yml  correlation-auau-123.yml  correlation-mcini.yml  correlation-mult.yml  correlation.yml  mc-correction-agag-158.yml  mc-correction-auau-123-all.yml  mc-correction-auau-123-even.yml  mc-correction-auau-123-occupancy.yml  mc-correction-auau-123-pT-theta.yml  mc-correction-auau-123-plains.yml  mc-correction-auau-123-true.yml  mc-correction-auau-123-wall.yml  mc-correction-auau-123-y-pT-theta.yml  mc-correction-auau-123.yml  mc-correction-debug.yml  mc-correlation-all.yml  mc-correlation-auau-123-occupancy.yml  mc-correlation-auau-123-wall.yml  mc-correlation-auau-123-y-pT-theta.yml  mc-correlation-debug.yml  mc-correlation-even.yml  mc-correlation-gen-pi-neg.yml  mc-correlation-gen-pi-pos.yml  mc-correlation-rec-pi-neg.yml  mc-correlation-rec-pi-pos.yml  (+2 more)
setups/na61/: CutsData.C  CutsL.C  CutsMC.C  pbpb_13agev.yml  pbpb_30agev.yml
src/: CMakeLists.txt
src/QnAnalysisBase/: AnalysisSetup.cpp  AnalysisSetup.hpp  AnalysisTree.hpp  Axis.hpp  CMakeLists.txt  Correlation.cpp  Correlation.h  Cut.hpp  Histogram.hpp  QVector.cpp  QVector.hpp  QnAnalysisBaseLinkDef.hpp  Variable.hpp
src/QnAnalysisConfig/: CMakeLists.txt  Config.cpp  Config.hpp  ConfigUtils.hpp  Convert.cpp  Convert.hpp  ReadConfig.cpp  YamlUtils.hpp  YamlUtils.test.cpp
src/QnAnalysisCorrect/: ATVarManagerTask.cpp  ATVarManagerTask.hpp  CMakeLists.txt  QnAnalysisCorrectLinkDef.hpp  QnCorrectionTask.cpp  QnCorrectionTask.hpp  Task.cpp  Task.hpp  TaskManager.cpp  TaskManager.hpp
src/QnAnalysisCorrelate/: AnalysisTask.h  BuildOptions.hpp.in  CMakeLists.txt  Config.hpp  Config.test.cpp  Correlation.cpp  CorrelationAction.h  CorrelationMain.cpp  CorrelationTask.cpp  CorrelationTask.h  CorrelationTaskRunner.cpp  CorrelationTaskRunner.hpp  StaticRegistry.h  TStringMeta.cpp  TStringMeta.hpp  TStringMeta.test.cpp  TStringMetaLinkDef.h  TensorIndex.h  UserCorrelationAction.hpp  UserCorrelationAction.test.cpp  Utils.h  Utils.hpp  Utils.test.cpp  YAMLHelper.hpp
src/QnAnalysisObservables/: CMakeLists.txt  Calculate.cpp  ConvertConfigs.cpp  ConvertConfigs.hpp  FileManager.cpp  FileManager.hpp  Format.hpp  Method.cpp  Method.hpp  MethodOf3SE.cpp  MethodOf3SE.hpp  MethodOfRS.cpp  MethodOfRS.hpp  Methods.hpp  Observables.hpp  Predicates.hpp  ResourceManager.hpp  Tools.hpp  V1Observables.cpp  V1Observables.hpp  calculator.cc  calculator.h  na61.cpp  proto.cpp
src/QnAnalysisObservablesEK/: CMakeLists.txt  GraphTools.hpp  Methods.hpp  Observables.hpp  Predicates.hpp  QnDv1Dy.cpp  QnDv1Dy.hpp  QnSystematicError.cpp  QnSystematicError.hpp  QnToolsExtensionLinkDef.h  ResourceManager.hpp  Tools.hpp  na61.cpp
src/QnAnalysisObservablesEK/Correlation/: CMakeLists.txt  Correlation.cpp  Correlation.hpp  Correlation.test.cpp  CorrelationLinkDef.hpp  CorrelationLinkDef.hpp.in
src/QnAnalysisObservablesEK/gse/: CMakeLists.txt  GraphSysErr.cpp  GraphSysErr.h  GraphSysErrLinkDef.h  gse.hpp
src/QnAnalysisObservablesEK/na61/: CMakeLists.txt  main_unfold_v1_pt_y_centrality.cpp  na61.cpp  plot_dv1_dy.cpp  plot_dv1_dy.hpp  plot_v1_2d.cpp  plot_v1_2d.hpp  plot_v1_centrality.cpp  plot_v1_centrality.hpp  plot_v1_pt_y.cpp  plot_v1_pt_y.hpp  remap_axis.cpp  remap_axis.hpp  resolution_3sub.cpp  resolution_3sub.hpp  resolution_4sub.cpp  resolution_4sub.hpp  resolution_mc.cpp  resolution_mc.hpp  using.hpp  v1_centrality.cpp  v1_centrality.hpp  v1_combine.cpp  v1_combine.hpp  v1_mc.cpp  v1_mc.hpp  v1_reco.cpp  v1_reco.hpp
src/QnAnalysisTools/: CMakeLists.txt  CombinePermute.hpp  QnAnalysisTools.hpp  TensorIndex.hpp
src/analyze/: CMakeLists.txt  FlowAnaLinkDef.h  FlowCoefficients.cpp  FlowCoefficients.h  FlowCoefficients.hpp  Resolution.cpp  Resolution.h  ResourceManager.cpp  ResourceManager.h  ResourceManager.hpp  Utils.h
src/base/: AnalysisSetup.cpp  AnalysisSetup.h  AnalysisSetup.hpp  Axis.cpp  Axis.h  Axis.hpp  CMakeLists.txt  Cut.cpp  Cut.h  Cut.hpp  FlowBaseLinkDef.h  Histogram.cpp  Histogram.h  Histogram.hpp  QVector.cpp  QVector.h  QVector.hpp  QnAnalysisBaseLinkDef.h  QnAnalysisBaseLinkDef.hpp  Variable.cpp  Variable.h  Variable.hpp
src/config/: CMakeLists.txt  Config.cpp  Config.h  Config.hpp  ConfigUtils.h  Convert.cpp  Convert.h  Convert.hpp  ReadConfig.cpp
src/correct/: CMakeLists.txt  CorrectTaskManager.cpp  CorrectTaskManager.h  CorrectionTask.cpp  CorrectionTask.h  FlowCorrectLinkDef.h  QnAnalysisCorrectLinkDef.h  Task.cpp  Task.h  Task.hpp  TaskManager.cpp  TaskManager.h  TaskManager.hpp
src/correlate/: CMakeLists.txt  CorrelationTask.cpp  CorrelationTask.h  CorrelationTask.hpp  Functions.h  Functions.hpp  QnAnalysisCorrelateLinkDef.h  Utils.h  Utils.hpp
src/tasks/: Analyze.cpp  CMakeLists.txt  Correct.cpp  Correlate.cpp  Profiles.cpp
src/tools/: CMakeLists.txt  QVectorQA.cxx
test/: CMakeLists.txt  test_runner.cpp
